Bug 348336 - ★★★ Crash while turning visibility of a layer
Summary: ★★★ Crash while turning visibility of a layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 2.9
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-27 21:45 UTC by David REVOY
Modified: 2016-04-19 15:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
[^ kcrash file ] (7.99 KB, text/plain)
2015-05-27 21:45 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2015-05-27 21:45:37 UTC
Created attachment 92875 [details]
[^ kcrash file ]

Hi, 
I got a crash this afternoon, with output rated as  ★★★ quality.
What was happening : I painted with a multi view on the same artwork. At one moment, I reduced the view I use as a thumbnail ( this one was set as 'still on the top' in a corner of my workspace) , then I switched visibity of a hidden layer on the main view. Krita crashed. The crash log is in attachment.
Comment 1 Stefano Bonicatti 2015-05-28 14:03:32 UTC
I'm trying to reproduce the issue but can't, are you able?
What kind of layer you switched the visibility on?
Comment 2 Stefano Bonicatti 2015-05-28 14:19:01 UTC
(In reply to Stefano Bonicatti from comment #1)
> I'm trying to reproduce the issue but can't, are you able?
> What kind of layer you switched the visibility on?

Sorry, derped, it's obviously in the crash log, it's a KisPaintLayer, weird.. now what that layer can have as a parent that is not a KoShapeLayer? Hum...
Comment 3 David REVOY 2015-05-28 15:18:28 UTC
Hi Stephano, 

I was screenrecording while the crash did happens, so you can see what I did exactly on this temporary link :
http://www.davidrevoy.com/XYZ/2015-05-28_crash-usermanual-artwork-playback-x1.avi
( I'll try to keep this short video 1 month on my server, or more )

Note : I trimed start and end of original video (320MB! now only 8MB ) the crash happens at 6:00min exactly  ; so there is 6 min of stuff I did before.
Comment 4 Halla Rempt 2015-05-28 16:10:06 UTC
To me it almost looks as if no layer was selected in the layerbox...
Comment 5 Dmitry Kazakov 2016-04-19 15:36:19 UTC
Git commit d372f522c76e266b1b2ec33786700c1e3a44d750 by Dmitry Kazakov.
Committed on 19/04/2016 at 15:36.
Pushed by dkazakov into branch 'master'.

Fix a dangerous state when the root node gets selected

When the view is not active we should track removing
the last layer manually.

Fixes T2087

M  +33   -0    libs/ui/KisView.cpp
M  +4    -0    libs/ui/KisView.h

http://commits.kde.org/krita/d372f522c76e266b1b2ec33786700c1e3a44d750