Fix a dangerous state when the root node gets selected

When the view is not active we should track removing
the last layer manually.

Fixes T2087
BUG:348336